--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ body {
   justify-content: flex-start;
   align-items: flex-start;
   padding: 20px;
-  min-height: 100vh;
+  min-height: 100%;
   max-height: 100%;
   background-color: #9ba9eb;
   padding-left: 100px;
@@ -318,8 +318,8 @@ hr {
   }
   .sub-div1-image2 {
     display: block;
-    width: 300px;
-    height: 200px;
+    width: 600px;
+    height: 250px;
     margin-bottom: 18px;
   }
   .sub-div2 {
@@ -328,4 +328,16 @@ hr {
   .result-container {
     justify-content: center;
   }
+  .main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 20px;
+   margin: 0px;
+    background-color: #9ba9eb;
+   
+    font-family: 'Roboto';
+  }
+  
 }
